# diradm

./: .cvsignore  .gitignore  AUTHORS  CHANGES.prefork  ChangeLog  DEBUGGING  DEVELOPMENT  KNOWN-BUGS  Makefile.am  Makefile.in  NEWS  README.in  README.prefork  THANKS  TODO  autofs-4.1.3.schema  config.h.in  configure.ac  cvs2cl-update.sh  cvs2cl.ufile  diradm  diradm-mkpasswd.pl  diradm.conf  diradm.sh  diradm.spec.in  irixpassword.schema  mkpasswd.pl  reconf
config/: Makefile.am
m4/: Makefile.am  autoconf-path_progs_error.m4  autoconf-prog_perl_modules.m4
man/: Makefile.am  diradm-chage.1  diradm-diradm.8
src/: .cvsignore  .gitignore  Makefile.am  diradm-mkpasswd.pl  diradm-mkpasswd.pl.in  diradm.automount.sh.in  diradm.check.sh  diradm.check.sh.in  diradm.common.sh  diradm.common.sh.in  diradm.conf  diradm.conf.in  diradm.group.sh  diradm.group.sh.in  diradm.host.sh  diradm.host.sh.in  diradm.in  diradm.misc.sh  diradm.misc.sh.in  diradm.samba.sh  diradm.samba.sh.in  diradm.sh  diradm.shadow.sh.in  diradm.user.sh  diradm.user.sh.in  superadduser.diradm.in
testsuite/: .cvsignore  Makefile.am  template.exp.in  test-create.sh
testsuite/config/: Makefile.am  unix.exp
testsuite/config-slapd/: .gitignore  Makefile.am  ldap.conf  ldapdump  slapd.conf  slapd.exp
testsuite/config-slapd/db/: .cvsignore
testsuite/diradm.am/: Makefile.am  amadd-1-customopt-description.tst  amadd-1-customopt.tst  amadd-1-defaultopt-description.tst  amadd-1-defaultopt.tst  amadd-1.exp  amdel-1-readd.tst  amdel-1.exp  ammapadd-1-add.tst  ammapadd-1.exp  ammapdel-1-add.tst  ammapdel-1.exp
testsuite/diradm.group/: Makefile.am  groupadd-1-basic-gidnumbermin.tst  groupadd-1-basic.tst  groupadd-1-gid.tst  groupadd-1-giddupe.tst  groupadd-1.exp  groupdel-1-add.tst  groupdel-1.exp  groupmod-1-add.tst  groupmod-1-rename.tst  groupmod-1-renumber-dupe-add.tst  groupmod-1-renumber-dupe.tst  groupmod-1-renumber.tst  groupmod-1.exp
testsuite/diradm.host/: Makefile.am  hostadd-1-address-dupe.tst  hostadd-1-address.tst  hostadd-1-alias-dupe.tst  hostadd-1-alias.tst  hostadd-1-complex.tst  hostadd-1-ether-dupe.tst  hostadd-1-ether.tst  hostadd-1-simple.tst  hostadd-1.exp  hostdel-1-add.tst  hostdel-1.exp  hostmod-1-add-address-dupe.tst  hostmod-1-add-address.tst  hostmod-1-del-address-dupe.tst  hostmod-1-del-address.tst  hostmod-1-rename.tst  hostmod-1.exp
testsuite/diradm.smb/: .cvsignore  Makefile.am  smbhostadd-1-rid.tst  smbhostadd-1.exp  smbhostadd-1.tst  smbhostdel-1-add.tst  smbhostdel-1.exp
testsuite/diradm.user/: Makefile.am  useradd-1-additional-groups-numeric.tst  useradd-1-additional-groups.tst  useradd-1-basic.tst  useradd-1-comment.tst  useradd-1-email.tst  useradd-1-redhat-additional-ldap-group-groupadd.tst  useradd-1-redhat-additional-ldap-group.tst  useradd-1-redhat.tst  useradd-1-shadow.tst  useradd-1.exp  userdel-1-readd.tst  userdel-1.exp  usermod-1-additional-ldap-group-groupadd.tst  usermod-1-additional-ldap-group.tst  usermod-1-comment.tst  usermod-1-expire.tst  usermod-1-gid0.tst  usermod-1-gid100.tst  usermod-1-home.tst  usermod-1-inactive.tst  usermod-1-initial-add-redhat.tst  usermod-1-initial-add.tst  usermod-1-rename-redhat.tst  usermod-1-rename.tst  usermod-1-shell.tst  usermod-1-uid.tst  usermod-1-unlock.tst  usermod-1.exp
testsuite/lib/: Makefile.am  diradm.exp
