# Copyright (C) 2004 Robin Hugh Johnson <robbat2@orbis-terrarum.net>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

# Install m4 macros in this directory
m4datadir = $(datadir)/aclocal

# List your m4 macros here
m4macros = 
noinst_m4macros = autoconf-path_progs_error.m4  autoconf-prog_perl_modules.m4

# The following is boilerplate
m4data_DATA = $(m4macros) 
noinst_DATA = $(noinst_m4macros) 
EXTRA_DIST = $(m4data_DATA) $(noinst_DATA)

