# Not ready for primetime.
man_MANS__ = diradm-chage.1 diradm-chfn.1 diradm-chsh.1 diradm-diradm.8 diradm-gpasswd.1 diradm-groupadd.8 diradm-groupdel.8 diradm-groupmod.8 diradm-hostadd.8 diradm-hostdel.8 diradm-hostmod.8 diradm-passwd.1 diradm-passwd.5 diradm-useradd.8 diradm-userdel.8 diradm-usermod.8
EXTRA_DIST = .gitignore $(man_MANS__)
