EXTRA_DIST = .gitignore groupadd-1-basic-gidnumbermin.tst groupadd-1-basic.tst groupadd-1-gid.tst groupadd-1-giddupe.tst groupadd-1.exp groupadd-1.tst groupdel-1-add.tst groupdel-1-readd.tst groupdel-1.exp groupdel-1.tst groupmod-1-add.tst groupmod-1-rename.tst groupmod-1-renumber-dupe-add.tst groupmod-1-renumber-dupe.tst groupmod-1-renumber.tst groupmod-1.exp groupmod-1.tst
