EXTRA_DIST = Makefile.am hostadd-1-address-dupe.tst hostadd-1-address-dupe.txt hostadd-1-address.tst hostadd-1-address.txt hostadd-1-alias-dupe.tst hostadd-1-alias-dupe.txt hostadd-1-alias.tst hostadd-1-alias.txt hostadd-1-complex.tst hostadd-1-complex.txt hostadd-1-ether-dupe.tst hostadd-1-ether-dupe.txt hostadd-1-ether.tst hostadd-1-ether.txt hostadd-1-simple.tst hostadd-1-simple.txt hostadd-1.exp hostdel-1-add.tst hostdel-1-add.txt hostdel-1-readd.tst hostdel-1-readd.txt hostdel-1.exp hostmod-1-add-address-dupe.tst hostmod-1-add-address-dupe.txt hostmod-1-add-address.tst hostmod-1-add-address.txt hostmod-1-del-address-dupe.tst hostmod-1-del-address-dupe.txt hostmod-1-del-address.tst hostmod-1-del-address.txt hostmod-1-initial-add.tst hostmod-1-initial-add.txt hostmod-1-rename.tst hostmod-1-rename.txt hostmod-1.exp
