EXTRA_DIST = .cvsignore hostadd-1-address-dupe.tst hostadd-1-address.tst hostadd-1-alias-dupe.tst hostadd-1-alias.tst hostadd-1-complex.tst hostadd-1-ether-dupe.tst hostadd-1-ether.tst hostadd-1-simple.tst hostadd-1.exp hostdel-1-add.tst hostdel-1-readd.tst hostdel-1.exp hostmod-1-add-address-dupe.tst hostmod-1-add-address.tst hostmod-1-del-address-dupe.tst hostmod-1-del-address.tst hostmod-1-initial-add.tst hostmod-1-rename.tst hostmod-1.exp
