EXTRA_DIST = .cvsignore useradd-1-additional-groups-numeric.tst useradd-1-additional-groups.tst useradd-1-basic.tst useradd-1-comment.tst useradd-1-email.tst useradd-1-redhat-additional-ldap-group-groupadd.tst useradd-1-redhat-additional-ldap-group.tst useradd-1-redhat.tst useradd-1-shadow.tst useradd-1.exp useradd-1.tst userdel-1-basic.tst userdel-1-readd.tst userdel-1.exp userdel-1.tst usermod-1-additional-gid-bin.tst usermod-1-additional-gid0.tst usermod-1-additional-ldap-group-groupadd.tst usermod-1-additional-ldap-group.tst usermod-1-comment.tst usermod-1-expire.tst usermod-1-gid0.tst usermod-1-gid100.tst usermod-1-home.tst usermod-1-inactive.tst usermod-1-initial-add-redhat.tst usermod-1-initial-add.tst usermod-1-lock.tst usermod-1-lock2.tst usermod-1-password.tst usermod-1-rename-redhat.tst usermod-1-rename.tst usermod-1-shell.tst usermod-1-uid.tst usermod-1-unlock.tst usermod-1-unlock2.tst usermod-1.exp usermod-1.tst
